# qka

./: .gitignore  CHANGELOG.md  LICENSE  README.md  _commit.ps1  mcp_manifest.json​  mkdocs.yml  pyproject.toml  requirements.txt  test.py  工作日志.md  工作进度记录.md
.github/workflows/: docs.yml  release.yml
docs/: A股市场证券代码命名规则.md  index.md
docs/advanced/: performance.md
docs/api/: brokers.md  core.md  index.md  utils.md
docs/api/brokers/: index.md
docs/api/core/: config.md  events.md  index.md
docs/api/mcp/: index.md
docs/api/utils/: index.md  logger.md  tools.md
docs/concepts/: backtest.md  broker.md  data.md  indicators.md  sizing.md  strategy.md
docs/development/: enhanced_features_phase1.md  index.md
docs/examples/: buy_and_hold.md  index.md  ma_cross.md  momentum.md  multi_factor.md  rsi_atr.md
docs/getting-started/: concepts.md  first-strategy.md  installation.md  quickstart.md
docs/guides/: backtest.md  data.md  indicators.md  report.md  sizing.md  strategy.md  trading.md
docs/user-guide/: backtest.md  config.md  data.md  events.md  logging.md  strategy.md  trading.md
examples/: basic_test.py  enhanced_features_demo.py  simple_backtest_demo.py  simple_demo.py
qka/: __init__.py  anis.py  backtest.py  cli.py  client.py  data.py  logger.py  server.py  trade.py  utils.py
qka/brokers/: __init__.py  client.py  server.py  trade.py
qka/core/: __init__.py  accessor.py  backtest.py  broker.py  config.py  data.py  events.py  indicators.py  plot.py  report.py  sizing.py  strategy.py
qka/core/data/: __init__.py  akshare.py  base.py  config.py  download.py  factory.py  qmt.py  sources.py
qka/mcp/: __init__.py  api.py  server.py
qka/server/: __init__.py  ws_client.py  zmq_server.py
qka/server/handlers/: __init__.py  class_inspector_handler.py  code_executor_handler.py
qka/utils/: __init__.py  logger.py  tools.py  util.py
skills/qka/: SKILL.md
skills/qka/references/: backtest.md  broker.md  data.md  report.md  sizing.md  strategy.md
tools/: generate_api_ref.py
