[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qka"
version = "0.1.0"
description = ""
authors = [{name = "myc", email = "mayuanchi1029@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
    "akshare>=1.16.93",
    "fastapi>=0.115.13",
    "flask>=3.1.1",
    "mcp[cli]>=1.9.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "mkdocstrings>=0.29.1",
    "mkdocstrings-python>=1.16.12",
    "nbformat>=5.10.4",
    "plotly>=6.1.1",
    "uvicorn>=0.34.3",
    "xtquant>=241014.1.2",
    "ipykernel>=6.29.5",
]
# 依赖移到requirements.txt，便于uv管理

[project.urls]
Home = "https://github.com/zsrl/qka"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version"
]

branch = "main"
upload_to_PyPI = true
upload_to_release = true
commit_author = "github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test"
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
